--- a/01-yad/lib/sparky-aptus-appcenter/graphics-editors.html
+++ b/01-yad/lib/sparky-aptus-appcenter/graphics-editors.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: April 21, 2021 by pavroo
+Last update: May 15, 2021 by pavroo
 -->
 	<head>
 		<title>Graphics -> Editors | APTus AppCenter</title>
@@ -101,16 +101,18 @@ Last update: April 21, 2021 by pavroo
 		</td>
 		<td><a href="aptus://graedi_rawtherapee" class="button1"><img src="images/gcolor2.svg" class="appicon"><br />RawTherapee</a>
 		</td>
+		<td><a href="aptus://graedi_smillaenlarger" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />SmillaEnlarger</a>
+		</td>
 		<td><a href="aptus://graedi_synfigstudio" class="button1"><img src="images/totem.svg" class="appicon"><br />Synfig Studio</a>
 		</td>
 		<td><a href="aptus://graedi_tetradraw" class="button1"><img src="images/krita.svg" class="appicon"><br />Tetradraw</a>
 		</td>
 		<td><a href="aptus://graedi_textdraw" class="button1"><img src="images/krita.svg" class="appicon"><br />Textdraw</a>
 		</td>
-		<td><a href="aptus://graedi_tuxpaint" class="button1"><img src="images/krita.svg" class="appicon"><br />Tux Paint</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://graedi_tuxpaint" class="button1"><img src="images/krita.svg" class="appicon"><br />Tux Paint</a>
+		</td>
 		<td><a href="aptus://graedi_view3dscene" class="button1"><img src="images/krita.svg" class="appicon"><br />View 3D Scene</a>
 		</td>
 		<td><a href="aptus://graedi_wings3d" class="button1"><img src="images/freecad.svg" class="appicon"><br />Wings 3D</a>
