--- a/01-yad/lib/sparky-aptus-appcenter/media-audioplayers.html
+++ b/01-yad/lib/sparky-aptus-appcenter/media-audioplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: February 20, 2021 by pavroo
+Last update: May 15, 2021 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Audio Players | APTus AppCenter</title>
@@ -73,28 +73,32 @@ Last update: February 20, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audpla_exaile" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Exaile</a>
 		</td>
+		<td><a href="aptus://audpla_foobnix" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Foobnix</a>
+		</td>
 		<td><a href="aptus://audpla_gmerlin" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Gmerlin</a>
 		</td>
 		<td><a href="aptus://audpla_gnome-music" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />GNOME Music</a>
 		</td>
-		<td><a href="aptus://audpla_gogglesmm" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Goggles Music Manager</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_gogglesmm" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Goggles Music Manager</a>
+		</td>
 		<td><a href="aptus://audpla_goobox" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Goobox</a>
 		</td>
 		<td><a href="aptus://audpla_gradio" class="button1"><img src="images/radio.svg" class="appicon"><br />Gradio</a>
 		</td>
 		<td><a href="aptus://audpla_gxmms2" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />GXMMS2</a>
 		</td>
+		<td><a href="aptus://audpla_jampal" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Jampal</a>
+		</td>
 		<td><a href="aptus://audpla_juk" class="button1"><img src="images/juk.svg" class="appicon"><br />JuK</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_lxmusic" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />LXMusic</a>
 		</td>
 		<td><a href="aptus://audpla_mellowplayer" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />MellowPlayer</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audpla_moc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MOC</a>
 		</td>
 		<td><a href="aptus://audpla_mpd" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MPD</a>
@@ -103,12 +107,12 @@ Last update: February 20, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audpla_pmrp" class="button1"><img src="images/radio.svg" class="appicon"><br />PMRP</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_pogo" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Pogo</a>
 		</td>
 		<td><a href="aptus://audpla_pragha" class="button1"><img src="images/play-music.svg" class="appicon"><br />Pragha</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audpla_qmmp" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />QMMP</a>
 		</td>
 		<td><a href="aptus://audpla_quodlibet" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Quod Libet</a>
@@ -117,12 +121,12 @@ Last update: February 20, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audpla_radiostation" class="button1"><img src="images/radio.svg" class="appicon"><br />RadioStation</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_rhythmbox" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Rhythmbox</a>
 		</td>
 		<td><a href="aptus://audpla_sayonara" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Sayonara</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audpla_silverjuke" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Silverjuke</a>
 		</td>
 		<td><a href="aptus://audpla_sonata" class="button1"><img src="images/cantata.svg" class="appicon"><br />Sonata</a>
@@ -131,12 +135,12 @@ Last update: February 20, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_spotify-client" class="button1"><img src="images/spotify.svg" class="appicon"><br />Spotify Client</a>
 		</td>
 		<td><a href="aptus://audpla_strawberry" class="button1"><img src="images0/strawberry.svg" class="appicon"><br />Strawberry</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audpla_xmms2" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />XMMS2</a>
 		</td>
 		<td><a href="aptus://audpla_yarock" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Yarock</a>
