--- a/01-yad/lib/sparky-aptus-appcenter/media-audiotools.html
+++ b/01-yad/lib/sparky-aptus-appcenter/media-audiotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: December 3, 2020 by pavroo
+Last update: May 15, 2021 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Audio Tools | APTus AppCenter</title>
@@ -57,18 +57,20 @@ Last update: December 3, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_dgedit" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />DGEdit</a>
 		</td>
-		<!--<td><a href="aptus://audtoo_din" class="button1"><img src="images/noise.svg" class="appicon"><br />DIN Is Noise</a>
-		</td>-->
+		<td><a href="aptus://audtoo_din" class="button1"><img src="images/noise.svg" class="appicon"><br />DIN Is Noise</a>
+		</td>
 		<td><a href="aptus://audtoo_drumkv1" class="button1"><img src="images/noise.svg" class="appicon"><br />drumkv1</a>
 		</td>
 		<td><a href="aptus://audtoo_foo-yc20" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Foo YC20</a>
 		</td>
 		<td><a href="aptus://audtoo_freedv" class="button1"><img src="images/radio.svg" class="appicon"><br />FreeDV</a>
 		</td>
-		<td><a href="aptus://audtoo_gjacktransport" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />gjacktransport</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audtoo_gjacktransport" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />gjacktransport</a>
+		</td>
+		<td><a href="aptus://audtoo_gmorgan" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />gmorgan</a>
+		</td>
 		<td><a href="aptus://audtoo_gtranscribe" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />gTranscribe</a>
 		</td>
 		<td><a href="aptus://audtoo_guitarix" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Guitarix</a>
@@ -77,12 +79,12 @@ Last update: December 3, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_jack-keyboard" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Jack Keyboard</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audtoo_kluppe" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Kluppe</a>
 		</td>
 		<td><a href="aptus://audtoo_kmix" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />KMix</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audtoo_kwave" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Kwave</a>
 		</td>
 		<td><a href="aptus://audtoo_lmms" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />LMMS</a>
@@ -91,12 +93,12 @@ Last update: December 3, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_mixxx" class="button1"><img src="images/mixxx.svg" class="appicon"><br />Mixxx</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audtoo_muse" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MusE</a>
 		</td>
 		<td><a href="aptus://audtoo_padthv1" class="button1"><img src="images/noise.svg" class="appicon"><br />Padthv1</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audtoo_phasex" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Phasex</a>
 		</td>
 		<td><a href="aptus://audtoo_puredata" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Pure Data</a>
@@ -105,12 +107,12 @@ Last update: December 3, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_qtractor" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Qtractor</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audtoo_qsynth" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />QSynth</a>
 		</td>
 		<td><a href="aptus://audtoo_rosegarden" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Rosegarden</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audtoo_samplv1" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Samplv1</a>
 		</td>
 		<td><a href="aptus://audtoo_setbfree" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />setBfree</a>
@@ -119,12 +121,12 @@ Last update: December 3, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_sooperlooper" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />SooperLooper</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audtoo_soundconverter" class="button1"><img src="images/sound-juicer.svg" class="appicon"><br />SoundConverter</a>
 		</td>
 		<td><a href="aptus://audtoo_snd-gtk-jack" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Sound file editor</a>
-		</td>
-	</tr>
-	<tr>	
+		</td>	
 		<td><a href="aptus://audtoo_sound-juicer" class="button1"><img src="images/sound-juicer.svg" class="appicon"><br />Sound-Juicer</a>
 		</td>
 		<td><a href="aptus://audtoo_soundkonverter" class="button1"><img src="images/sound-juicer.svg" class="appicon"><br />soundKonverter</a>
@@ -133,15 +135,17 @@ Last update: December 3, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_tangerine" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Tangerine</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audtoo_tuxguitar" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Tux Guitar</a>
 		</td>
 		<td><a href="aptus://audtoo_vkeybd" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Vkeybd</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audtoo_vmpk" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Vmpk</a>
 		</td>
 		<td><a href="aptus://audtoo_wavbreaker" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />WavBreaker</a>
+		</td>
+		<td><a href="aptus://audtoo_xcutmp3" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />xcutmp3</a>
 		</td>
 		<td><a href="aptus://audtoo_yoshimi" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Yoshimi</a>
 		</td>
