--- a/01-yad/lib/sparky-aptus-appcenter/media-others.html
+++ b/01-yad/lib/sparky-aptus-appcenter/media-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 16, 2020 by pavroo
+Last update: May 15, 2021 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Others | APTus AppCenter</title>
@@ -73,30 +73,32 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://medoth_jnoisemeter" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />JNoiseMeter</a>
 		</td>
+		<td><a href="aptus://medoth_karlyriceditor" class="button1"><img src="images/easytag.svg" class="appicon"><br />Karaoke lyrics editor</a>
+		</td>
 		<td><a href="aptus://medoth_kazam" class="button1"><img src="images/gnome-camera.svg" class="appicon"><br />Kazam</a>
 		</td>
 		<td><a href="aptus://medoth_kmetronome" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />KMetronome</a>
 		</td>
-		<td><a href="aptus://medoth_kid3" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Kid3</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://medoth_kmidimon" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />KMidiMonitor</a>
+		</td>
+		<td><a href="aptus://medoth_kid3" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Kid3</a>
+		</td>
 		<td><a href="aptus://medoth_kid3-qt" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Kid3 Qt</a>
 		</td>
-		<!--<td><a href="aptus://medoth_kover" class="button1"><img src="images/media-optical.svg" class="appicon"><br />Kover</a>
-		</td>-->
 		<td><a href="aptus://medoth_lingot" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Lingot</a>
 		</td>
 		<td><a href="aptus://medoth_lxmms2" class="button1"><img src="images/system-run.svg" class="appicon"><br />Lxmms2</a>
 		</td>
 		<td><a href="aptus://medoth_meterbridge" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MeterBridge</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://medoth_mopidy" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Mopidy</a>
 		</td>
 		<td><a href="aptus://medoth_mudita24" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Mudita24</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://medoth_musescore" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MuseScore</a>
 		</td>
 		<td><a href="aptus://medoth_pavucontrol" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Pavucontrol</a>
@@ -105,12 +107,12 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://medoth_performous" class="button1"><img src="images/audio-recorder.svg" class="appicon"><br />Performous</a>
 		</td>
-		<td><a href="aptus://medoth_pianobooster" class="button1"><img src="images1/hexter.svg" class="appicon"><br />Pianobooster</a>
-		</td>	
-		<td><a href="aptus://medoth_psk31lx" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />psk31lx</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://medoth_pianobooster" class="button1"><img src="images1/hexter.svg" class="appicon"><br />Pianobooster</a>
+		</td>
+		<td><a href="aptus://medoth_psk31lx" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />psk31lx</a>
+		</td>
 		<td><a href="aptus://medoth_pulseaudio-equalizer" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />PulseAudio Equalizer</a>
 		</td>
 		<td><a href="aptus://medoth_qasconfig" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Qasconfig</a>
@@ -119,18 +121,22 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://medoth_qspeakers" class="button1"><img src="images/radio.svg" class="appicon"><br />QSpeakers</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://medoth_rakarrack" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Rakarrack</a>
 		</td>
 		<td><a href="aptus://medoth_simplescreenrecorder" class="button1"><img src="images/gnome-camera.svg" class="appicon"><br />Simple Screen Recorder</a>
 		</td>
-	</tr>
-	<tr>
+		<td><a href="aptus://medoth_spek" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Spek</a>
+		</td>
 		<td><a href="aptus://medoth_swami" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Swami</a>
 		</td>
 		<td><a href="aptus://medoth_timemachine" class="button1"><img src="images/audio-recorder.svg" class="appicon"><br />Time Machine</a>
 		</td>
 		<td><a href="aptus://medoth_vokoscreen-ng" class="button1"><img src="images/gnome-camera.svg" class="appicon"><br />VokoscreenNG</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://medoth_wsjtx" class="button1"><img src="images/radio.svg" class="appicon"><br />WSJT-X</a>
 		</td>
 	</tr>
