--- a/01-yad/lib/sparky-aptus-appcenter/net-filetransfer.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-filetransfer.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 16, 2020 by pavroo
+Last update: May 15, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> File Transfer | APTus AppCenter</title>
@@ -49,15 +49,19 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://netfil_kget" class="button1"><img src="images/download.svg" class="appicon"><br />KGet</a>
 		</td>
-		<td><a href="aptus://netfil_lftp" class="button1"><img src="images/download.svg" class="appicon"><br />LFTP</a>
+		<td><a href="aptus://netfil_kget-integrator" class="button1"><img src="images/download.svg" class="appicon"><br />KGet integrator</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netfil_lftp" class="button1"><img src="images/download.svg" class="appicon"><br />LFTP</a>
+		</td>
 		<td><a href="aptus://netfil_persepolis" class="button1"><img src="images/persepolis.svg" class="appicon"><br />Persepolis</a>
 		</td>
 		<td><a href="aptus://netfil_uftp" class="button1"><img src="images/download.svg" class="appicon"><br />UFTP</a>
 		</td>
 		<td><a href="aptus://netfil_uget" class="button1"><img src="images/uget.svg" class="appicon"><br />uGet</a>
+		</td>
+		<td><a href="aptus://netfil_uget-integrator" class="button1"><img src="images/uget.svg" class="appicon"><br />uGet Integrator</a>
 		</td>
 		<td><a href="aptus://netfil_wget" class="button1"><img src="images/download.svg" class="appicon"><br />Wget</a>
 		</td>
