--- a/01-yad/lib/sparky-aptus-appcenter/games-emulators.html
+++ b/01-yad/lib/sparky-aptus-appcenter/games-emulators.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: April 21, 2021 by pavroo
+Last update: May 15, 2021 by pavroo
 -->
 	<head>
 		<title>Games -> Emulators | APTus AppCenter</title>
@@ -87,16 +87,18 @@ Last update: April 21, 2021 by pavroo
 		</td>
 		<td><a href="aptus://gamemu_pcsx2" class="button1"><img src="images1/pcsx.svg" class="appicon"><br />PCSX2</a>
 		</td>
+		<td><a href="aptus://gamemu_retroarch" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />RetroArch</a>
+		</td>
 		<td><a href="aptus://gamemu_rlvm" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />rlvm</a>
 		</td>
 		<td><a href="aptus://gamemu_scummvm" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />ScummVM</a>
 		</td>
 		<td><a href="aptus://gamemu_stella" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Stella</a>
 		</td>
-		<td><a href="aptus://gamemu_visualboyadvance" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Visual Boy Advance</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://gamemu_visualboyadvance" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Visual Boy Advance</a>
+		</td>
 		<td><a href="aptus://gamemu_virtualjaguar" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Virtual Jaguar</a>
 		</td>
 		<td><a href="aptus://gamemu_yabause" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Yabause</a>
