--- a/01-yad/lib/sparky-aptus-appcenter/graphics-others.html
+++ b/01-yad/lib/sparky-aptus-appcenter/graphics-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: January 21, 2021 by pavroo
+Last update: May 15, 2021 by pavroo
 -->
 	<head>
 		<title>Graphics -> Others | APTus AppCenter</title>
@@ -50,6 +50,10 @@ Last update: January 21, 2021 by pavroo
 		<td><a href="aptus://graoth_qcamera" class="button1"><img src="images/camera-web.svg" class="appicon"><br />QCamera</a>
 		</td>
 		<td><a href="aptus://graoth_webcamoid" class="button1"><img src="images/camera-web.svg" class="appicon"><br />Webcamoid</a>
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://graoth_zoneminder" class="button1"><img src="images/gtkam.svg" class="appicon"><br />ZoneMinder</a>
 		</td>
 	</tr>
 </tbody>
