--- a/01-yad/lib/sparky-aptus-appcenter/media-videoplayers.html
+++ b/01-yad/lib/sparky-aptus-appcenter/media-videoplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 13, 2020 by pavroo
+Last update: May 15, 2021 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Players | APTus AppCenter</title>
@@ -39,20 +39,24 @@ Last update: July 13, 2020 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
+		<td><a href="aptus://vidpla_qarte" class="button1"><img src="images/totem.svg" class="appicon"><br />Arte TV browser</a>
+		</td>
 		<td><a href="aptus://vidpla_bino" class="button1"><img src="images/mpv.svg" class="appicon"><br />Bino3D</a>
 		</td>
 		<td><a href="aptus://vidpla_celluloid" class="button1"><img src="images/mpv.svg" class="appicon"><br />Celluloid</a>
 		</td>
 		<td><a href="aptus://vidpla_electronplayer" class="button1"><img src="images/smtube.svg" class="appicon"><br />ElectronPlayer</a>
 		</td>
+		<td><a href="aptus://vidpla_freetuxtv" class="button1"><img src="images/totem.svg" class="appicon"><br />FreetuxTV</a>
+		</td>
 		<td><a href="aptus://vidpla_gnome-mpv" class="button1"><img src="images/mpv.svg" class="appicon"><br />GNOME MPV</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://vidpla_kmplayer" class="button1"><img src="images/mplayer.svg" class="appicon"><br />KMPlayer</a>
 		</td>
 		<td><a href="aptus://vidpla_kodi" class="button1"><img src="images/totem.svg" class="appicon"><br />Kodi</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://vidpla_motionbox" class="button1"><img src="images/mplayer.svg" class="appicon"><br />Motionbox</a>
 		</td>
 		<td><a href="aptus://vidpla_mplayer" class="button1"><img src="images/mplayer.svg" class="appicon"><br />MPlayer</a>
@@ -61,12 +65,12 @@ Last update: July 13, 2020 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_parole" class="button1"><img src="images/mplayer.svg" class="appicon"><br />Parole</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://vidpla_popcorn-time" class="button1"><img src="images1/popcorntime.svg" class="appicon"><br />Popcorn Time</a>
 		</td>
 		<td><a href="aptus://vidpla_qtav-players" class="button1"><img src="images/mplayer.svg" class="appicon"><br />QtAV Players</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://vidpla_rage" class="button1"><img src="images/mplayer.svg" class="appicon"><br />Rage</a>
 		</td>
 		<td><a href="aptus://vidpla_smplayer" class="button1"><img src="images/smplayer.svg" class="appicon"><br />SMPlayer</a>
@@ -75,12 +79,12 @@ Last update: July 13, 2020 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://vidpla_stremio" class="button1"><img src="images/totem.svg" class="appicon"><br />Stremio</a>
 		</td>
 		<td><a href="aptus://vidpla_totem" class="button1"><img src="images/totem.svg" class="appicon"><br />Totem</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://vidpla_vlc" class="button1"><img src="images/vlc.svg" class="appicon"><br />VLC</a>
 		</td>
 		<td><a href="aptus://vidpla_xine-console" class="button1"><img src="images/xine.svg" class="appicon"><br />xine-console</a>
