--- a/01-yad/lib/sparky-aptus-appcenter/media-videotools.html
+++ b/01-yad/lib/sparky-aptus-appcenter/media-videotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 16, 2020 by pavroo
+Last update: May 15, 2021 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Tools | APTus AppCenter</title>
@@ -43,22 +43,30 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://videdi_blender" class="button1"><img src="images/blender.svg" class="appicon"><br />Blender</a>
 		</td>
+		<td><a href="aptus://videdi_bombono-dvd" class="button1"><img src="images/devede.svg" class="appicon"><br />Bombono DVD</a>
+		</td>
 		<td><a href="aptus://videdi_ciano" class="button1"><img src="images/smtube.svg" class="appicon"><br />Ciano</a>
 		</td>
 		<td><a href="aptus://videdi_clipgrab" class="button1"><img src="images/smtube.svg" class="appicon"><br />ClipGrab</a>
 		</td>
 		<td><a href="aptus://videdi_devede" class="button1"><img src="images/devede.svg" class="appicon"><br />DeVeDe</a>
 		</td>
-		<td><a href="aptus://videdi_dvdstyler" class="button1"><img src="images/devede.svg" class="appicon"><br />DVDStyler</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://videdi_dvdstyler" class="button1"><img src="images/devede.svg" class="appicon"><br />DVDStyler</a>
+		</td>
 		<td><a href="aptus://videdi_flowblade" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />Flowblade</a>
+		</td>
+		<td><a href="aptus://videdi_handbrake" class="button1"><img src="images/devede.svg" class="appicon"><br />HandBrake</a>
+		</td>
+		<td><a href="aptus://videdi_imagination" class="button1"><img src="images/devede.svg" class="appicon"><br />Imagination</a>
 		</td>
 		<td><a href="aptus://videdi_kdenlive" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />Kdenlive</a>
 		</td>
-		<!--<td><a href="aptus://videdi_lives" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />LiVES</a>
-		</td>-->
+		<td><a href="aptus://videdi_lives" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />LiVES</a>
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://videdi_mystiq" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Mystiq</a>
 		</td>
 		<td><a href="aptus://videdi_ogmrip" class="button1"><img src="images/devede.svg" class="appicon"><br />OGMRip</a>
@@ -67,25 +75,40 @@ Last update: September 16, 2020 by pavroo
 		</td>
 		<td><a href="aptus://videdi_pitivi" class="button1"><img src="images/avidemux.svg" class="appicon"><br />PiTiVi</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://videdi_qstopmotion" class="button1"><img src="images/avidemux.svg" class="appicon"><br />qStopmotion</a>
 		</td>
+		<td><a href="aptus://videdi_shorten" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Shorten</a>
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://videdi_shotcut" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Shotcut</a>
 		</td>
 		<td><a href="aptus://videdi_shutter-encoder" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Shutter Encoder</a>
+		</td>
+		<td><a href="aptus://videdi_slowmovideo" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Slowmovideo</a>
 		</td>
 		<td><a href="aptus://videdi_sparky-tube" class="button1"><img src="images0/sparky-tube.svg" class="appicon"><br />Sparky Tube</a>
 		</td>
 		<td><a href="aptus://videdi_stopmotion" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Stopmotion</a>
 		</td>
-		<td><a href="aptus://videdi_videomass" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Videomass</a>
+		<td><a href="aptus://videdi_vcdimager" class="button1"><img src="images/devede.svg" class="appicon"><br />VCDImager</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://videdi_videomass" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Videomass</a>
+		</td>
+		<td><a href="aptus://videdi_videotrans" class="button1"><img src="images/devede.svg" class="appicon"><br />Videotrans</a>
+		</td>
+		<td><a href="aptus://videdi_vqmt" class="button1"><img src="images/avidemux.svg" class="appicon"><br />VQMT</a>
+		</td>
 		<td><a href="aptus://videdi_winff" class="button1"><img src="images/avidemux.svg" class="appicon"><br />WinFF</a>
 		</td>
 		<td><a href="aptus://videdi_xjadeo" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Xjadeo</a>
+		<td><a href="aptus://videdi_youtube-dl" class="button1"><img src="images/youtube.svg" class="appicon"><br />YouTube-DL</a>
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://videdi_youtubedl-gui" class="button1"><img src="images/youtube.svg" class="appicon"><br />YouTubeDL GUI</a>
 		</td>
 	</tr>
 </tbody>
