--- a/01-yad/lib/sparky-aptus-appcenter/net-email.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-email.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: April 21, 2021 by pavroo
+Last update: May 15, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> e-Mail | APTus AppCenter</title>
@@ -41,6 +41,8 @@ Last update: April 21, 2021 by pavroo
 	<tr>
 		<td><a href="aptus://netema_alpine" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Alpine</a>
 		</td>
+		<td><a href="aptus://netema_ ayatana-webmail" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Ayatana Webmail</a>
+		</td>
 		<td><a href="aptus://netema_balsa" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Balsa</a>
 		</td>
 		<td><a href="aptus://netema_claws-mail" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Claws-Mail</a>
@@ -49,16 +51,22 @@ Last update: April 21, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netema_geary" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Geary</a>
 		</td>
-		<td><a href="aptus://netema_gmail-desktop" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Gmail Desktop</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netema_gmail-desktop" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Gmail Desktop</a>
+		</td>
+		<td><a href="aptus://netema_gnome-shell-mailnag" class="button1"><img src="images/e-mail.svg" class="appicon"><br />GNOME Shell Mailnag</a>
+		</td>
+		<td><a href="aptus://netema_gnubiff" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Gnubiff</a>
+		</td>
 		<td><a href="aptus://netema_kmail" class="button1"><img src="images/e-mail.svg" class="appicon"><br />KMail</a>
 		</td>
 		<td><a href="aptus://netema_mutt" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Mutt</a>
 		</td>
 		<td><a href="aptus://netema_protonmail-bridge" class="button1"><img src="images/terminal.svg" class="appicon"><br />ProtonMail Bridge</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netema_sylpheed" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Sylpheed</a>
 		</td>
 		<td><a href="aptus://netema_thunderbird" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Thunderbird</a>
