--- a/01-yad/lib/sparky-aptus-appcenter/office-note.html
+++ b/01-yad/lib/sparky-aptus-appcenter/office-note.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: January 21, 2021 by pavroo
+Last update: May 15, 2021 by pavroo
 -->
 	<head>
 		<title>Office -> Notes | APTus AppCenter</title>
@@ -61,12 +61,14 @@ Last update: January 21, 2021 by pavroo
 		</td>
 		<td><a href="aptus://offnot_note" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Note</a>
 		</td>
-		<td><a href="aptus://offnot_rhinote" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Rhinote</a>
+		<td><a href="aptus://offnot_rednotebook" class="button1"><img src="images/tomboy.svg" class="appicon"><br />RedNoteBook</a>
 		</td>
-		<td><a href="aptus://offnot_tomboy-ng" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Tomboy</a>
+		<td><a href="aptus://offnot_rhinote" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Rhinote</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offnot_tomboy-ng" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Tomboy</a>
+		</td>
 		<td><a href="aptus://offnot_zettlr" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Zettlr</a>
 		</td>
 	</tr>
