--- a/01-yad/lib/sparky-aptus-appcenter/office-others.html
+++ b/01-yad/lib/sparky-aptus-appcenter/office-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 19, 2020 by pavroo
+Last update: May 15, 2021 by pavroo
 -->
 	<head>
 		<title>Office -> Others | APTus AppCenter</title>
@@ -43,8 +43,6 @@ Last update: June 19, 2020 by pavroo
 		</td>
 		<td><a href="aptus://offoth_gcalcli" class="button1"><img src="images/calendar.svg" class="appicon"><br />Gcalcli</a>
 		</td>
-		<!--<td><a href="aptus://offoth_jpilot" class="button1"><img src="images/smartphone.svg" class="appicon"><br />JPilot</a>
-		</td>-->
 		<td><a href="aptus://offoth_krop" class="button1"><img src="images/pdf.svg" class="appicon"><br />Krop</a>
 		</td>
 		<td><a href="aptus://offoth_scribus" class="button1"><img src="images/scribus.svg" class="appicon"><br />Scribus</a>
@@ -55,6 +53,8 @@ Last update: June 19, 2020 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offoth_tagspaces" class="button1"><img src="images/easytag.svg" class="appicon"><br />TagSpaces</a>
+		</td>
 		<td><a href="aptus://offoth_xsane" class="button1"><img src="images/scanner.svg" class="appicon"><br />Xsane</a>
 		</td>
 	</tr>
