--- a/01-yad/lib/sparky-aptus-appcenter/development.html
+++ b/01-yad/lib/sparky-aptus-appcenter/development.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: January 21, 2021 by pavroo
+Last update: May 24, 2021 by pavroo
 -->
 	<head>
 		<title>Development | APTus AppCenter</title>
@@ -115,7 +115,7 @@ Last update: January 21, 2021 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_hexyl" class="button1"><img src="images/default-icon.svg" class="appicon"><br />hexyl</a>
 		</td>
-		<td><a href="aptus://devtoo_default-jre" class="button1"><img src="images/java.svg" class="appicon"><br />Java Runtime</a>
+		<td><a href="aptus://devtoo_default-jdk" class="button1"><img src="images/java.svg" class="appicon"><br />Java Development Kit (OpenJDK)</a>
 		</td>
 		<td><a href="aptus://devtoo_jeex" class="button1"><img src="images/text-script.svg" class="appicon"><br />Jeex</a>
 		</td>
@@ -189,7 +189,7 @@ Last update: January 21, 2021 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_code" class="button1"><img src="images/visualstudiocode.svg" class="appicon"><br />Visual Code Studio</a>
 		</td>
-		<td><a href="aptus://devtoo_codium" class="button1"><img src="images/documents.svg" class="appicon"><br />VSCodium</a>
+		<td><a href="aptus://devtoo_codium" class="button1"><img src="images/visualstudiocode.svg" class="appicon"><br />VSCodium</a>
 		</td>
 	</tr>
 	<tr>
