--- a/01-yad/lib/sparky-aptus-appcenter/net-vpn.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-vpn.html
@@ -6,7 +6,7 @@ License: GNU GPL 3
 Last update: May 24, 2021 by pavroo
 -->
 	<head>
-		<title>Network -> Feeds | APTus AppCenter</title>
+		<title>Network -> VPN | APTus AppCenter</title>
 		<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 		<script src="./js/lang.js" type="text/javascript"></script>
 	</head>
@@ -39,17 +39,25 @@ Last update: May 24, 2021 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
-		<td><a href="aptus://netrss_akregator" class="button1"><img src="images/akregator.svg" class="appicon"><br />Akregator</a>
+		<td><a href="aptus://netvpn_connman-vpn" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />Connman VPN</a>
 		</td>
-		<td><a href="aptus://netrss_liferea" class="button1"><img src="images/rss.svg" class="appicon"><br />Liferea</a>
+		<td><a href="aptus://netvpn_gadmin-openvpn-client" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />Gadmin OpenVPN Client</a>
 		</td>
-		<td><a href="aptus://netrss_quiterss" class="button1"><img src="images/rss.svg" class="appicon"><br />Quiterss</a>
+		<td><a href="aptus://netvpn_network-manager-openvpn-gnome" class="button1"><img src="images/network.svg" class="appicon"><br />Network Manager OpenVPN GNOME</a>
 		</td>
-		<td><a href="aptus://netrss_rssguard" class="button1"><img src="images/rss.svg" class="appicon"><br />RSS Guard</a>
+		<td><a href="aptus://netvpn_network-manager-vpnc-gnome" class="button1"><img src="images/network.svg" class="appicon"><br />Network Manager VPNC GNOME</a>
 		</td>
-		<td><a href="aptus://netrss_rsstail" class="button1"><img src="images/rss.svg" class="appicon"><br />RSSTail</a>
+		<td><a href="aptus://netvpn_openfortivpn" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />Openforti VPN</a>
 		</td>
-		<td><a href="aptus://netrss_tickr" class="button1"><img src="images/rss.svg" class="appicon"><br />Tickr</a>
+		<td><a href="aptus://netvpn_protonvpn" class="button1"><img src="images/preferences-system-privacy.svg" class="appicon"><br />ProtonVPN</a>
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://netvpn_riseup-vpn" class="button1"><img src="images/preferences-system-privacy.svg" class="appicon"><br />RiseupVPN</a>
+		</td>
+		<td><a href="aptus://netvpn_softether-vpnclient" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />SoftEther VPN Client</a>
+		</td>
+		<td><a href="aptus://netvpn_vpnc" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />VPNC</a>
 		</td>
 	</tr>
 </tbody>
