--- a/01-yad/lib/sparky-aptus-appcenter/net-webbrowser.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-webbrowser.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: January 21, 2021 by pavroo
+Last update: May 20, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> Web Browsers | APTus AppCenter</title>
@@ -81,6 +81,8 @@ Last update: January 21, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_librewolf" class="button1"><img src="images0/librewolf.png" class="appicon"><br />Librewolf</a>
+		</td>
 		<td><a href="aptus://netweb_links2" class="button1"><img src="images/terminal.svg" class="appicon"><br />Links2</a>
 		</td>
 		<td><a href="aptus://netweb_lynx" class="button1"><img src="images/terminal.svg" class="appicon"><br />Lynx</a>
@@ -91,10 +93,10 @@ Last update: January 21, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netweb_netrik" class="button1"><img src="images/terminal.svg" class="appicon"><br />Netrik</a>
 		</td>
-		<td><a href="aptus://netweb_netsurf-gtk" class="button1"><img src="images0/netsurf.png" class="appicon"><br />NetSurf GTK</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_netsurf-gtk" class="button1"><img src="images0/netsurf.png" class="appicon"><br />NetSurf GTK</a>
+		</td>
 		<td><a href="aptus://netweb_next" class="button1"><img src="images/terminal.svg" class="appicon"><br />Next</a>
 		</td>
 		<td><a href="aptus://netweb_opera-stable" class="button1"><img src="images/opera.svg" class="appicon"><br />Opera</a>
@@ -105,10 +107,10 @@ Last update: January 21, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netweb_qutebrowser" class="button1"><img src="images0/qutebrowser.png" class="appicon"><br />qutebrowser</a>
 		</td>
-		<td><a href="aptus://netweb_seamonkey" class="button1"><img src="images0/seamonkey.png" class="appicon"><br />SeaMonkey</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_seamonkey" class="button1"><img src="images0/seamonkey.png" class="appicon"><br />SeaMonkey</a>
+		</td>
 		<td><a href="aptus://netweb_slimjet" class="button1"><img src="images/slimjet.svg" class="appicon"><br />Slimjet</a>
 		</td>
 		<td><a href="aptus://netweb_tor-browser" class="button1"><img src="images0/tor-browser.png" class="appicon"><br />TOR Browser</a>
@@ -119,6 +121,8 @@ Last update: January 21, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netweb_waterfox-classic-kpe" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox Classic</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netweb_waterfox-current-kpe" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox Current</a>
 		</td>
 	</tr>
