--- a/01-yad/lib/sparky-aptus-appcenter/internet.html
+++ b/01-yad/lib/sparky-aptus-appcenter/internet.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: Dec 2, 2018 by pavroo
+Last update: May 24, 2021 by pavroo
 -->
 	<head>
 		<title>Network | APTus AppCenter</title>
@@ -53,11 +53,11 @@ Last update: Dec 2, 2018 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="net-vpn.html" class="button"><span><script>dict.print('main', 'vpn');</script></span></a>
+		</td>
 		<td><a href="net-webbrowser.html" class="button"><span><script>dict.print('main', 'webbrowsers');</script></span></a>
 		</td>
 		<td><a href="net-others.html" class="button"><span><script>dict.print('main', 'others');</script></span></a>
-		</td>
-		<td>
 		</td>
 	</tr>
 </tbody>
