--- a/01-yad/lib/sparky-aptus-appcenter/net-email.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-email.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: May 15, 2021 by pavroo
+Last update: May 24, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> e-Mail | APTus AppCenter</title>
@@ -39,34 +39,68 @@ Last update: May 15, 2021 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
-		<td><a href="aptus://netema_alpine" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Alpine</a>
+		<td><a href="aptus://netema_alot" class="button1"><img src="images/terminal.svg" class="appicon"><br />Alot</a>
 		</td>
-		<td><a href="aptus://netema_ ayatana-webmail" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Ayatana Webmail</a>
+		<td><a href="aptus://netema_alpine" class="button1"><img src="images/terminal.svg" class="appicon"><br />Alpine</a>
+		</td>
+		<td><a href="aptus://netema_astroid" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Astroid</a>
+		</td>
+		<td><a href="aptus://netema_ ayatana-webmail" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Ayatana Webmail</a>
 		</td>
 		<td><a href="aptus://netema_balsa" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Balsa</a>
+		</td>
+		<td><a href="aptus://netema_bsd-mailx" class="button1"><img src="images/terminal.svg" class="appicon"><br />BSD Mailx</a>
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://netema_citadel-client" class="button1"><img src="images/terminal.svg" class="appicon"><br />Citadel client</a>
 		</td>
 		<td><a href="aptus://netema_claws-mail" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Claws-Mail</a>
 		</td>
 		<td><a href="aptus://netema_evolution" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Evolution</a>
 		</td>
+		<td><a href="aptus://netema_fdm" class="button1"><img src="images/terminal.svg" class="appicon"><br />fdm</a>
+		</td>
+		<td><a href="aptus://netema_fetchmail" class="button1"><img src="images/terminal.svg" class="appicon"><br />fetchmail</a>
+		</td>
 		<td><a href="aptus://netema_geary" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Geary</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netema_getmail" class="button1"><img src="images/terminal.svg" class="appicon"><br />getmail</a>
+		</td>
 		<td><a href="aptus://netema_gmail-desktop" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Gmail Desktop</a>
 		</td>
 		<td><a href="aptus://netema_gnome-shell-mailnag" class="button1"><img src="images/e-mail.svg" class="appicon"><br />GNOME Shell Mailnag</a>
 		</td>
 		<td><a href="aptus://netema_gnubiff" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Gnubiff</a>
 		</td>
+		<td><a href="aptus://netema_gnumail.app" class="button1"><img src="images/e-mail.svg" class="appicon"><br />GNU Mail</a>
+		</td>
 		<td><a href="aptus://netema_kmail" class="button1"><img src="images/e-mail.svg" class="appicon"><br />KMail</a>
-		</td>
-		<td><a href="aptus://netema_mutt" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Mutt</a>
-		</td>
-		<td><a href="aptus://netema_protonmail-bridge" class="button1"><img src="images/terminal.svg" class="appicon"><br />ProtonMail Bridge</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netema_mailutils" class="button1"><img src="images/terminal.svg" class="appicon"><br />Mailutils</a>
+		</td>
+		<td><a href="aptus://netema_mmh" class="button1"><img src="images/terminal.svg" class="appicon"><br />mmh</a>
+		</td>
+		<td><a href="aptus://netema_mutt" class="button1"><img src="images/terminal.svg" class="appicon"><br />Mutt</a>
+		</td>
+		<td><a href="aptus://netema_neomutt" class="button1"><img src="images/terminal.svg" class="appicon"><br />Neomutt</a>
+		</td>
+		<td><a href="aptus://netema_nmh" class="button1"><img src="images/terminal.svg" class="appicon"><br />nmh</a>
+		</td>
+		<td><a href="aptus://netema_notmuch" class="button1"><img src="images/terminal.svg" class="appicon"><br />Notmuch</a>
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://netema_procmail" class="button1"><img src="images/terminal.svg" class="appicon"><br />Procmail</a>
+		</td>
+		<td><a href="aptus://netema_protonmail-bridge" class="button1"><img src="images/terminal.svg" class="appicon"><br />ProtonMail Bridge</a>
+		</td>
+		<td><a href="aptus://netema_ roundcube" class="button1"><img src="images/web-browser.svg" class="appicon"><br />RoundCube Webmail</a>
+		</td>
 		<td><a href="aptus://netema_sylpheed" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Sylpheed</a>
 		</td>
 		<td><a href="aptus://netema_thunderbird" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Thunderbird</a>
