--- a/01-yad/lib/sparky-aptus-appcenter/system-virtual.html
+++ b/01-yad/lib/sparky-aptus-appcenter/system-virtual.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: May 17, 2021 by pavroo
+Last update: May 24, 2021 by pavroo
 -->
 	<head>
 		<title>System -> Virtualization | APTus AppCenter</title>
@@ -41,7 +41,9 @@ Last update: May 17, 2021 by pavroo
 	<tr>
 		<td><a href="aptus://sysvir_docker.io" class="button1"><img src="images/container.svg" class="appicon"><br />Docker</a>
 		</td>
-		<td><a href="aptus://sysvir_default-jre" class="button1"><img src="images/java.svg" class="appicon"><br />OpenJDK</a>
+		<td><a href="aptus://sysvir_gnome-boxes" class="button1"><img src="images/gnome-boxes.svg" class="appicon"><br />GNOME Boxes</a>
+		</td>
+		<td><a href="aptus://sysvir_default-jre" class="button1"><img src="images/java.svg" class="appicon"><br />Java Runtime (OpenJRE)</a>
 		</td>
 		<td><a href="aptus://sysvir_qemu" class="button1"><img src="images/default-icon.svg" class="appicon"><br />QEMU</a>
 		</td>
@@ -49,10 +51,10 @@ Last update: May 17, 2021 by pavroo
 		</td>
 		<td><a href="aptus://sysvir_virt-manager" class="button1"><img src="images/virt-manager.svg" class="appicon"><br />Virt Manager</a>
 		</td>
-		<td><a href="aptus://sysvir_virt-viewer" class="button1"><img src="images/virt-manager.svg" class="appicon"><br />Virt Viewer</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://sysvir_virt-viewer" class="button1"><img src="images/virt-manager.svg" class="appicon"><br />Virt Viewer</a>
+		</td>
 		<td><a href="aptus://sysvir_virtualbox-qt" class="button1"><img src="images/vbox.svg" class="appicon"><br />VirtualBox</a>
 		</td>
 		<td><a href="aptus://sysvir_vmware" class="button1"><img src="images/vmware.svg" class="appicon"><br />VMware</a>
