--- a/01-yad/lib/sparky-aptus-appcenter/accessories-devices.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories-devices.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 23, 2020 by pavroo
+Last update: July 9, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories -> Devices | APTus AppCenter</title>
@@ -69,6 +69,8 @@ Last update: July 23, 2020 by pavroo
 	<tr>
 		<td><a href="aptus://accdev_mousetweaks" class="button1"><img src="images/mouse.svg" class="appicon"><br />Mouse Tweaks</a>
 		</td>
+		<td><a href="aptus://accdev_nuntius" class="button1"><img src="images/smartphone.svg" class="appicon"><br />Nuntius</a>
+		</td>
 		<td><a href="aptus://accdev_piper" class="button1"><img src="images/mouse.svg" class="appicon"><br />Piper</a>
 		</td>
 		<td><a href="aptus://accdev_pulseaudio-module-bluetooth" class="button1"><img src="images/bluetooth.svg" class="appicon"><br />Pulseaudio Module Bluetooth</a>
@@ -77,10 +79,10 @@ Last update: July 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accdev_qml-module-qtbluetooth" class="button1"><img src="images/bluetooth.svg" class="appicon"><br />Qml Module Qt Bluetooth</a>
 		</td>
-		<td><a href="aptus://accdev_sparky-libinput" class="button1"><img src="images/touchpad.svg" class="appicon"><br />Sparky Libinput</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accdev_sparky-libinput" class="button1"><img src="images/touchpad.svg" class="appicon"><br />Sparky Libinput</a>
+		</td>
 		<td><a href="aptus://accdev_system-config-printer" class="button1"><img src="images/printer.svg" class="appicon"><br />System Config Printer</a>
 		</td>
 		<td><a href="aptus://accdev_vkeybd" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Vkeybd</a>
