--- a/01-yad/lib/sparky-aptus-appcenter/net-communication.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: April 21, 2021 by pavroo
+Last update: June 9, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -39,6 +39,8 @@ Last update: April 21, 2021 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
+		<td><a href="aptus://netcom_android-messages-desktop" class="button1"><img src="images/anbox.svg" class="appicon"><br />Android Messages</a>
+		</td>
 		<td><a href="aptus://netcom_bti" class="button1"><img src="images/twitter.svg" class="appicon"><br />bti</a>
 		</td>
 		<td><a href="aptus://netcom_caprine" class="button1"><img src="images/caprine.svg" class="appicon"><br />Caprine</a>
@@ -49,24 +51,27 @@ Last update: April 21, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netcom_element-desktop" class="button1"><img src="images/im.svg" class="appicon"><br />Element Desktop</a>
 		</td>
-		<td><a href="aptus://netcom_empathy" class="button1"><img src="images/im.svg" class="appicon"><br />Empathy</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_empathy" class="button1"><img src="images/im.svg" class="appicon"><br />Empathy</a>
+		</td>
 		<td><a href="aptus://netcom_franz" class="button1"><img src="images/franz.svg" class="appicon"><br />Franz</a>
 		</td>
 		<td><a href="aptus://netcom_gajim" class="button1"><img src="images/gajim.svg" class="appicon"><br />Gajim</a>
 		</td>
 		<td><a href="aptus://netcom_gomuks" class="button1"><img src="images/terminal.svg" class="appicon"><br />Gomuks</a>
 		</td>
+		<td><a href="aptus://netcom_hamsket" class="button1"><img src="images/im.svg" class="appicon"><br />Hamsket</a>
+		</td>
 		<td><a href="aptus://netcom_hexchat" class="button1"><img src="images/hexchat.svg" class="appicon"><br />HexChat</a>
-		</td>
-		<td><a href="aptus://netcom_ircii" class="button1"><img src="images/irc.svg" class="appicon"><br />ircII</a>
-		</td>
-		<td><a href="aptus://netcom_irssi" class="button1"><img src="images/irc.svg" class="appicon"><br />Irssi</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netcom_ircii" class="button1"><img src="images/irc.svg" class="appicon"><br />ircII</a>
+		</td>
+
+		<td><a href="aptus://netcom_irssi" class="button1"><img src="images/irc.svg" class="appicon"><br />Irssi</a>
+		</td>
 		<td><a href="aptus://netcom_konversation" class="button1"><img src="images/im.svg" class="appicon"><br />Konversation</a>
 		</td>
 		<td><a href="aptus://netcom_kopete" class="button1"><img src="images/im.svg" class="appicon"><br />Kopete</a>
@@ -75,12 +80,12 @@ Last update: April 21, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netcom_linphone-desktop" class="button1"><img src="images/phone.svg" class="appicon"><br />Linphone</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_loqui" class="button1"><img src="images/irc.svg" class="appicon"><br />Loqui</a>
 		</td>
 		<td><a href="aptus://netcom_lostirc" class="button1"><img src="images/irc.svg" class="appicon"><br />LostIRC</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netcom_mumble" class="button1"><img src="images/im.svg" class="appicon"><br />Mumble</a>
 		</td>
 		<td><a href="aptus://netcom_nheko" class="button1"><img src="images/im.svg" class="appicon"><br />Nheko</a>
@@ -89,12 +94,12 @@ Last update: April 21, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netcom_psi" class="button1"><img src="images/im.svg" class="appicon"><br />Psi</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_quassel" class="button1"><img src="images/quassel.svg" class="appicon"><br />Quassel</a>
 		</td>
 		<td><a href="aptus://netcom_quaternion" class="button1"><img src="images/im.svg" class="appicon"><br />Quaternion</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netcom_rocketchat" class="button1"><img src="images/im.svg" class="appicon"><br />Rocket.Chat</a>
 		</td>
 		<td><a href="aptus://netcom_scrollz" class="button1"><img src="images/irc.svg" class="appicon"><br />ScrollZ</a>
@@ -103,12 +108,12 @@ Last update: April 21, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netcom_skypeforlinux" class="button1"><img src="images/skype.svg" class="appicon"><br />Skype</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_smuxi" class="button1"><img src="images/im.svg" class="appicon"><br />Smuxi</a>
 		</td>
 		<td><a href="aptus://webextra_teamspeak" class="button1"><img src="images/im.svg" class="appicon"><br />TeamSpeak Installer</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netcom_telegram-desktop" class="button1"><img src="images/telegram.svg" class="appicon"><br />Telegram Desktop</a>
 		</td>
 		<td><a href="aptus://netcom_tinyirc" class="button1"><img src="images/irc.svg" class="appicon"><br />TinyIRC</a>
@@ -117,6 +122,8 @@ Last update: April 21, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netcom_twinkle" class="button1"><img src="images/phone.svg" class="appicon"><br />Twinkle</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netcom_weechat" class="button1"><img src="images/im.svg" class="appicon"><br />WeeChat</a>
 		</td>
 	</tr>
