--- a/01-yad/lib/sparky-aptus-appcenter/media-videoplayers.html
+++ b/01-yad/lib/sparky-aptus-appcenter/media-videoplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: May 15, 2021 by pavroo
+Last update: June 9, 2021 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Players | APTus AppCenter</title>
@@ -47,12 +47,14 @@ Last update: May 15, 2021 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_electronplayer" class="button1"><img src="images/smtube.svg" class="appicon"><br />ElectronPlayer</a>
 		</td>
-		<td><a href="aptus://vidpla_freetuxtv" class="button1"><img src="images/totem.svg" class="appicon"><br />FreetuxTV</a>
+		<td><a href="aptus://vidpla_freetube" class="button1"><img src="images/smtube.svg" class="appicon"><br />FreeTube</a>
 		</td>
-		<td><a href="aptus://vidpla_gnome-mpv" class="button1"><img src="images/mpv.svg" class="appicon"><br />GNOME MPV</a>
+		<td><a href="aptus://vidpla_freetuxtv" class="button1"><img src="images/totem.svg" class="appicon"><br />FreetuxTV</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://vidpla_gnome-mpv" class="button1"><img src="images/mpv.svg" class="appicon"><br />GNOME MPV</a>
+		</td>
 		<td><a href="aptus://vidpla_kmplayer" class="button1"><img src="images/mplayer.svg" class="appicon"><br />KMPlayer</a>
 		</td>
 		<td><a href="aptus://vidpla_kodi" class="button1"><img src="images/totem.svg" class="appicon"><br />Kodi</a>
@@ -63,10 +65,10 @@ Last update: May 15, 2021 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_mpv" class="button1"><img src="images/mpv.svg" class="appicon"><br />mpv</a>
 		</td>
-		<td><a href="aptus://vidpla_parole" class="button1"><img src="images/mplayer.svg" class="appicon"><br />Parole</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://vidpla_parole" class="button1"><img src="images/mplayer.svg" class="appicon"><br />Parole</a>
+		</td>
 		<td><a href="aptus://vidpla_popcorn-time" class="button1"><img src="images1/popcorntime.svg" class="appicon"><br />Popcorn Time</a>
 		</td>
 		<td><a href="aptus://vidpla_qtav-players" class="button1"><img src="images/mplayer.svg" class="appicon"><br />QtAV Players</a>
@@ -77,10 +79,10 @@ Last update: May 15, 2021 by pavroo
 		</td>
 		<td><a href="aptus://vidpla_smtube" class="button1"><img src="images/smtube.svg" class="appicon"><br />SMTube</a>
 		</td>
-		<td><a href="aptus://vidpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://vidpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
+		</td>
 		<td><a href="aptus://vidpla_stremio" class="button1"><img src="images/totem.svg" class="appicon"><br />Stremio</a>
 		</td>
 		<td><a href="aptus://vidpla_totem" class="button1"><img src="images/totem.svg" class="appicon"><br />Totem</a>
