--- a/01-yad/lib/sparky-aptus-appcenter/net-vpn.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-vpn.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: May 24, 2021 by pavroo
+Last update: June 9, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> VPN | APTus AppCenter</title>
@@ -39,25 +39,35 @@ Last update: May 24, 2021 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
-		<td><a href="aptus://netvpn_connman-vpn" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />Connman VPN</a>
+		<td><a href="aptus://netprv_connman-vpn" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />Connman VPN</a>
 		</td>
-		<td><a href="aptus://netvpn_gadmin-openvpn-client" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />Gadmin OpenVPN Client</a>
+		<td><a href="aptus://netprv_freelan" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />Freelan</a>
 		</td>
-		<td><a href="aptus://netvpn_network-manager-openvpn-gnome" class="button1"><img src="images/network.svg" class="appicon"><br />Network Manager OpenVPN GNOME</a>
+		<td><a href="aptus://netprv_gadmin-openvpn-client" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />Gadmin OpenVPN Client</a>
 		</td>
-		<td><a href="aptus://netvpn_network-manager-vpnc-gnome" class="button1"><img src="images/network.svg" class="appicon"><br />Network Manager VPNC GNOME</a>
+		<td><a href="aptus://netprv_network-manager-openvpn-gnome" class="button1"><img src="images/network.svg" class="appicon"><br />Network Manager OpenVPN GNOME</a>
 		</td>
-		<td><a href="aptus://netvpn_openfortivpn" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />Openforti VPN</a>
+		<td><a href="aptus://netprv_network-manager-vpnc-gnome" class="button1"><img src="images/network.svg" class="appicon"><br />Network Manager VPNC GNOME</a>
 		</td>
-		<td><a href="aptus://netvpn_protonvpn" class="button1"><img src="images/preferences-system-privacy.svg" class="appicon"><br />ProtonVPN</a>
+		<td><a href="aptus://netprv_openconnect" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />OpenConnect</a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://netvpn_riseup-vpn" class="button1"><img src="images/preferences-system-privacy.svg" class="appicon"><br />RiseupVPN</a>
+		<td><a href="aptus://netprv_openfortivpn" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />Openforti VPN</a>
 		</td>
-		<td><a href="aptus://netvpn_softether-vpnclient" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />SoftEther VPN Client</a>
+		<td><a href="aptus://netprv_openvpn" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />OpenVPN</a>
 		</td>
-		<td><a href="aptus://netvpn_vpnc" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />VPNC</a>
+		<td><a href="aptus://netprv_protonvpn" class="button1"><img src="images/preferences-system-privacy.svg" class="appicon"><br />ProtonVPN</a>
+		</td>
+		<td><a href="aptus://netprv_riseup-vpn" class="button1"><img src="images/preferences-system-privacy.svg" class="appicon"><br />RiseupVPN</a>
+		</td>
+		<td><a href="aptus://netprv_softether-vpnclient" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />SoftEther VPN Client</a>
+		</td>
+		<td><a href="aptus://netprv_vpnc" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />VPNC</a>
+		</td>
+	</tr>
+	<tr>
+		<td><a href="aptus://netprv_wireguard" class="button1"><img src="images/preferences-system-network-vpn.svg" class="appicon"><br />WireGuard</a>
 		</td>
 	</tr>
 </tbody>
