--- a/01-yad/lib/sparky-aptus-appcenter/media-audioplayers.html
+++ b/01-yad/lib/sparky-aptus-appcenter/media-audioplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: July 23, 2021 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Audio Players | APTus AppCenter</title>
@@ -106,10 +106,12 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audpla_ncmpc" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />ncmpc</a>
 		</td>
-		<td><a href="aptus://audpla_pmrp" class="button1"><img src="images/radio.svg" class="appicon"><br />PMRP</a>
+		<td><a href="aptus://audpla_nuclear" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Nuclear</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_pmrp" class="button1"><img src="images/radio.svg" class="appicon"><br />PMRP</a>
+		</td>
 		<td><a href="aptus://audpla_pogo" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Pogo</a>
 		</td>
 		<td><a href="aptus://audpla_pragha" class="button1"><img src="images/play-music.svg" class="appicon"><br />Pragha</a>
@@ -120,24 +122,26 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://audpla_radio" class="button1"><img src="images/radio.svg" class="appicon"><br />Radio</a>
 		</td>
-		<td><a href="aptus://audpla_radiostation" class="button1"><img src="images/radio.svg" class="appicon"><br />RadioStation</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_radiostation" class="button1"><img src="images/radio.svg" class="appicon"><br />RadioStation</a>
+		</td>
 		<td><a href="aptus://audpla_rhythmbox" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Rhythmbox</a>
 		</td>
 		<td><a href="aptus://audpla_sayonara" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Sayonara</a>
+		</td>
+		<td><a href="aptus://audpla_shortwave" class="button1"><img src="images/radio.svg" class="appicon"><br />ShortWave</a>
 		</td>
 		<td><a href="aptus://audpla_silverjuke" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Silverjuke</a>
 		</td>
 		<td><a href="aptus://audpla_sonata" class="button1"><img src="images/cantata.svg" class="appicon"><br />Sonata</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audpla_sparky-play" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Play MP3</a>
 		</td>
 		<td><a href="aptus://audpla_sparky-player" class="button1"><img src="images/mpv.svg" class="appicon"><br />Sparky Player</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audpla_spotify-client" class="button1"><img src="images/spotify.svg" class="appicon"><br />Spotify Client</a>
 		</td>
 		<td><a href="aptus://audpla_strawberry" class="button1"><img src="images0/strawberry.svg" class="appicon"><br />Strawberry</a>
