--- a/01-yad/lib/sparky-aptus-appcenter/media-videotools.html
+++ b/01-yad/lib/sparky-aptus-appcenter/media-videotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: July 23, 2021 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Tools | APTus AppCenter</title>
@@ -64,10 +64,12 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://videdi_kdenlive" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />Kdenlive</a>
 		</td>
-		<td><a href="aptus://videdi_lives" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />LiVES</a>
+		<td><a href="aptus://videdi_lightworks" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Lightworks</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://videdi_lives" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />LiVES</a>
+		</td>
 		<td><a href="aptus://videdi_mystiq" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Mystiq</a>
 		</td>
 		<td><a href="aptus://videdi_ogmrip" class="button1"><img src="images/devede.svg" class="appicon"><br />OGMRip</a>
@@ -78,10 +80,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://videdi_qstopmotion" class="button1"><img src="images/avidemux.svg" class="appicon"><br />qStopmotion</a>
 		</td>
-		<td><a href="aptus://videdi_shorten" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Shorten</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://videdi_shorten" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Shorten</a>
+		</td>
 		<td><a href="aptus://videdi_shotcut" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Shotcut</a>
 		</td>
 		<td><a href="aptus://videdi_shutter-encoder" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Shutter Encoder</a>
@@ -92,10 +94,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://videdi_stopmotion" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Stopmotion</a>
 		</td>
-		<td><a href="aptus://videdi_vcdimager" class="button1"><img src="images/devede.svg" class="appicon"><br />VCDImager</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://videdi_vcdimager" class="button1"><img src="images/devede.svg" class="appicon"><br />VCDImager</a>
+		</td>
 		<td><a href="aptus://videdi_videomass" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Videomass</a>
 		</td>
 		<td><a href="aptus://videdi_videotrans" class="button1"><img src="images/devede.svg" class="appicon"><br />Videotrans</a>
@@ -105,10 +107,10 @@ Last update: June 13, 2021 by pavroo
 		<td><a href="aptus://videdi_winff" class="button1"><img src="images/avidemux.svg" class="appicon"><br />WinFF</a>
 		</td>
 		<td><a href="aptus://videdi_xjadeo" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Xjadeo</a>
-		<td><a href="aptus://videdi_youtube-dl" class="button1"><img src="images/youtube.svg" class="appicon"><br />YouTube-DL</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://videdi_youtube-dl" class="button1"><img src="images/youtube.svg" class="appicon"><br />YouTube-DL</a>
+		</td>
 		<td><a href="aptus://videdi_youtubedl-gui" class="button1"><img src="images/youtube.svg" class="appicon"><br />YouTubeDL GUI</a>
 		</td>
 	</tr>
