--- a/01-yad/lib/sparky-aptus-appcenter/accessories-others.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: July 23, 2021 by pavroo
 -->
 	<head>
 		<title>Accessories -> Others | APTus AppCenter</title>
@@ -68,6 +68,8 @@ Last update: June 13, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_komorebi" class="button1"><img src="images/desktop.svg" class="appicon"><br />Komorebi</a>
+		</td>
 		<td><a href="aptus://accoth_kupfer" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Kupfer</a>
 		</td>
 		<td><a href="aptus://accoth_light-locker" class="button1"><img src="images/screensaver.svg" class="appicon"><br />Light Locker</a>
@@ -78,10 +80,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accoth_obconf" class="button1"><img src="images1/obconf.svg" class="appicon"><br />ObConf</a>
 		</td>
-		<td><a href="aptus://accoth_obconf-qt" class="button1"><img src="images1/obconf.svg" class="appicon"><br />ObConf Qt</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_obconf-qt" class="button1"><img src="images1/obconf.svg" class="appicon"><br />ObConf Qt</a>
+		</td>
 		<td><a href="aptus://accoth_picom" class="button1"><img src="images/desktop-effects.svg" class="appicon"><br />Picom</a>
 		</td>
 		<td><a href="aptus://accoth_plank" class="button1"><img src="images/dock.svg" class="appicon"><br />Plank</a>
@@ -92,10 +94,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accoth_qtqr" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />QtQR</a>
 		</td>
-		<td><a href="aptus://accoth_rofi" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Rofi</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_rofi" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Rofi</a>
+		</td>
 		<td><a href="aptus://accoth_sparky-about" class="button1"><img src="images/sparky.svg" class="appicon"><br />Sparky About</a>
 		</td>
 		<td><a href="aptus://accoth_sparky-dashboard" class="button1"><img src="images1/alacarte.svg" class="appicon"><br />Sparky Dashboard</a>
@@ -106,10 +108,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://accoth_tint2" class="button1"><img src="images1/panel.svg" class="appicon"><br />Tint2</a>
 		</td>
-		<td><a href="aptus://accoth_wbar" class="button1"><img src="images/dock.svg" class="appicon"><br />Wbar</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_wbar" class="button1"><img src="images/dock.svg" class="appicon"><br />Wbar</a>
+		</td>
 		<td><a href="aptus://accoth_wbar-config" class="button1"><img src="images/dock.svg" class="appicon"><br />Wbar Config</a>
 		</td>
 		<td><a href="aptus://accoth_xscreensaver" class="button1"><img src="images/screensaver.svg" class="appicon"><br />XScreenSaver</a>
