--- a/01-yad/lib/sparky-aptus-appcenter/graphics-editors.html
+++ b/01-yad/lib/sparky-aptus-appcenter/graphics-editors.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: July 23, 2021 by pavroo
 -->
 	<head>
 		<title>Graphics -> Editors | APTus AppCenter</title>
@@ -54,6 +54,8 @@ Last update: June 13, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://graedi_enve" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />Enve</a>
+		</td>
 		<td><a href="aptus://graedi_filmulator-gui" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />Filmulator</a>
 		</td>
 		<td><a href="aptus://graedi_fotoxx" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />Fotoxx</a>
@@ -64,10 +66,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://graedi_gnome-paint" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />GNOME Paint</a>
 		</td>
-		<td><a href="aptus://graedi_hugin" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />Hugin</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://graedi_hugin" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />Hugin</a>
+		</td>
 		<td><a href="aptus://graedi_imagemagick" class="button1"><img src="images/imagemagick.svg" class="appicon"><br />ImageMagick</a>
 		</td>
 		<td><a href="aptus://graedi_inkscape" class="button1"><img src="images/inkscape.svg" class="appicon"><br />Inkscape</a>
@@ -80,10 +82,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://graedi_kolourpaint4" class="button1"><img src="images/kolourpaint.svg" class="appicon"><br />Kolourpaint4</a>
 		</td>
-		<td><a href="aptus://graedi_krita" class="button1"><img src="images/krita.svg" class="appicon"><br />Krita</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://graedi_krita" class="button1"><img src="images/krita.svg" class="appicon"><br />Krita</a>
+		</td>
 		<td><a href="aptus://graedi_lazpaint" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />LazPaint</a>
 		</td>
 		<td><a href="aptus://graedi_lightzone" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />LightZone</a>
@@ -94,10 +96,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://graedi_opentoonz" class="button1"><img src="images/totem.svg" class="appicon"><br />OpenToonz</a>
 		</td>
-		<td><a href="aptus://graedi_photoflare" class="button1"><img src="images/krita.svg" class="appicon"><br />Photoflare</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://graedi_photoflare" class="button1"><img src="images/krita.svg" class="appicon"><br />Photoflare</a>
+		</td>
 		<td><a href="aptus://graedi_posterazor" class="button1"><img src="images/gnome-photos.svg" class="appicon"><br />Posterazor</a>
 		</td>
 		<td><a href="aptus://graedi_rawtherapee" class="button1"><img src="images/gcolor2.svg" class="appicon"><br />RawTherapee</a>
@@ -108,10 +110,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://graedi_tetradraw" class="button1"><img src="images/krita.svg" class="appicon"><br />Tetradraw</a>
 		</td>
-		<td><a href="aptus://graedi_textdraw" class="button1"><img src="images/krita.svg" class="appicon"><br />Textdraw</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://graedi_textdraw" class="button1"><img src="images/krita.svg" class="appicon"><br />Textdraw</a>
+		</td>
 		<td><a href="aptus://graedi_tuxpaint" class="button1"><img src="images/krita.svg" class="appicon"><br />Tux Paint</a>
 		</td>
 		<td><a href="aptus://graedi_view3dscene" class="button1"><img src="images/krita.svg" class="appicon"><br />View 3D Scene</a>
