--- a/01-yad/lib/sparky-aptus-appcenter/net-p2p.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-p2p.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: July 23, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> Peer2Peer | APTus AppCenter</title>
@@ -48,14 +48,14 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netp2p_deluge" class="button1"><img src="images/deluge.svg" class="appicon"><br />Deluge</a>
 		</td>
-		<td><a href="aptus://netp2p_ktorrent" class="button1"><img src="images/ktorrent.svg" class="appicon"><br />KTorrent</a>
+		<td><a href="aptus://netp2p_frostwire" class="button1"><img src="images/frostwire.svg" class="appicon"><br />FrostWire</a>
 		</td>
-		<!--<td><a href="aptus://netp2p_mldonkey-gui" class="button1"><img src="images/download.svg" class="appicon"><br />MLDonkey GUI</a>
-		</td>-->
-		<td><a href="aptus://netp2p_qbittorrent" class="button1"><img src="images/qbittorrent.svg" class="appicon"><br />qBittorrent</a>
+		<td><a href="aptus://netp2p_ktorrent" class="button1"><img src="images/ktorrent.svg" class="appicon"><br />KTorrent</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netp2p_qbittorrent" class="button1"><img src="images/qbittorrent.svg" class="appicon"><br />qBittorrent</a>
+		</td>
 		<td><a href="aptus://netp2p_rtorrent" class="button1"><img src="images/bittorrent.svg" class="appicon"><br />rtorrent</a>
 		</td>
 		<td><a href="aptus://netp2p_transmission" class="button1"><img src="images/transmission.svg" class="appicon"><br />Transmission</a>
