--- a/01-yad/lib/sparky-aptus-appcenter/net-webbrowser.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-webbrowser.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: July 23, 2021 by pavroo
 -->
 	<head>
 		<title>Network -> Web Browsers | APTus AppCenter</title>
@@ -74,17 +74,19 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netweb_icecat" class="button1"><img src="images0/icecat.png" class="appicon"><br />IceCat</a>
 		</td>
-		<td><a href="aptus://netweb_iridium-browser" class="button1"><img src="images0/iridium.png" class="appicon"><br />Iridium</a>
-		</td>
+		<!--<td><a href="aptus://netweb_iridium-browser" class="button1"><img src="images0/iridium.png" class="appicon"><br />Iridium</a>
+		</td>-->
 		<td><a href="aptus://netweb_iron" class="button1"><img src="images0/iron.png" class="appicon"><br />Iron</a>
 		</td>
 		<td><a href="aptus://netweb_konqueror" class="button1"><img src="images/konqueror.svg" class="appicon"><br />Konqueror</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netweb_librewolf" class="button1"><img src="images0/librewolf.png" class="appicon"><br />Librewolf</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netweb_links2" class="button1"><img src="images/terminal.svg" class="appicon"><br />Links2</a>
+		</td>
+		<td><a href="aptus://netweb_luakit" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Luakit</a>
 		</td>
 		<td><a href="aptus://netweb_lynx" class="button1"><img src="images/terminal.svg" class="appicon"><br />Lynx</a>
 		</td>
@@ -116,14 +118,16 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://netweb_tor-browser" class="button1"><img src="images0/tor-browser.png" class="appicon"><br />TOR Browser</a>
 		</td>
+		<td><a href="aptus://netweb_viper-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Viper Browser</a>
+		</td>
 		<td><a href="aptus://netweb_vivaldi-stable" class="button1"><img src="images/vivaldi.svg" class="appicon"><br />Vivaldi</a>
 		</td>
 		<td><a href="aptus://netweb_w3m" class="button1"><img src="images/terminal.svg" class="appicon"><br />w3m</a>
 		</td>
-		<td><a href="aptus://netweb_waterfox-classic-kpe" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox Classic</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_waterfox-classic-kpe" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox Classic</a>
+		</td>
 		<td><a href="aptus://netweb_waterfox-current-kpe" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox Current</a>
 		</td>
 	</tr>
